# serializer version: 1
# name: test_detector[DomainSeparatorCollision-0.5.16-permit_domain_collision.sol]
  list([
    list([
      dict({
        'check': 'domain-separator-collision',
        'confidence': 'High',
        'description': '''
          The function signature of ERC20.fopwCDKKK() (tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol#161-163) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
        'elements': list([
          dict({
            'name': 'fopwCDKKK',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol',
              'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol',
              'is_dependency': False,
              'length': 150,
              'lines': list([
                161,
                162,
                163,
              ]),
              'start': 5248,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'ERC20',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol',
                  'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol',
                  'is_dependency': False,
                  'length': 6188,
                  'lines': list([
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                    49,
                    50,
                    51,
                    52,
                    53,
                    54,
                    55,
                    56,
                    57,
                    58,
                    59,
                    60,
                    61,
                    62,
                    63,
                    64,
                    65,
                    66,
                    67,
                    68,
                    69,
                    70,
                    71,
                    72,
                    73,
                    74,
                    75,
                    76,
                    77,
                    78,
                    79,
                    80,
                    81,
                    82,
                    83,
                    84,
                    85,
                    86,
                    87,
                    88,
                    89,
                    90,
                    91,
                    92,
                    93,
                    94,
                    95,
                    96,
                    97,
                    98,
                    99,
                    100,
                    101,
                    102,
                    103,
                    104,
                    105,
                    106,
                    107,
                    108,
                    109,
                    110,
                    111,
                    112,
                    113,
                    114,
                    115,
                    116,
                    117,
                    118,
                    119,
                    120,
                    121,
                    122,
                    123,
                    124,
                    125,
                    126,
                    127,
                    128,
                    129,
                    130,
                    131,
                    132,
                    133,
                    134,
                    135,
                    136,
                    137,
                    138,
                    139,
                    140,
                    141,
                    142,
                    143,
                    144,
                    145,
                    146,
                    147,
                    148,
                    149,
                    150,
                    151,
                    152,
                    153,
                    154,
                    155,
                    156,
                    157,
                    158,
                    159,
                    160,
                    161,
                    162,
                    163,
                    164,
                    165,
                    166,
                    167,
                    168,
                    169,
                    170,
                    171,
                    172,
                    173,
                    174,
                    175,
                    176,
                    177,
                    178,
                    179,
                    180,
                    181,
                    182,
                    183,
                    184,
                    185,
                    186,
                    187,
                    188,
                    189,
                    190,
                    191,
                    192,
                    193,
                    194,
                    195,
                    196,
                    197,
                    198,
                    199,
                    200,
                    201,
                    202,
                    203,
                    204,
                    205,
                  ]),
                  'start': 449,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'fopwCDKKK()',
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol#L161-L163',
        'id': 'cb8ae27add92ad3163cbe9c0fb29a2a0032ba46384bbd5541d1d750251f5c83e',
        'impact': 'Medium',
        'markdown': '''
          The function signature of [ERC20.fopwCDKKK()](tests/detectors/domain-separator-collision/0.5.16/permit_domain_collision.sol#L161-L163) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[DomainSeparatorCollision-0.5.16-permit_domain_state_var_collision.sol]
  list([
    list([
      dict({
        'check': 'domain-separator-collision',
        'confidence': 'High',
        'description': '''
          The function signature of ERC20.fopwCDKKK (tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol#46) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
        'elements': list([
          dict({
            'name': 'fopwCDKKK',
            'source_mapping': dict({
              'ending_column': 29,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol',
              'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol',
              'is_dependency': False,
              'length': 24,
              'lines': list([
                46,
              ]),
              'start': 1735,
              'starting_column': 5,
            }),
            'type': 'variable',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'ERC20',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol',
                  'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol',
                  'is_dependency': False,
                  'length': 6061,
                  'lines': list([
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                    49,
                    50,
                    51,
                    52,
                    53,
                    54,
                    55,
                    56,
                    57,
                    58,
                    59,
                    60,
                    61,
                    62,
                    63,
                    64,
                    65,
                    66,
                    67,
                    68,
                    69,
                    70,
                    71,
                    72,
                    73,
                    74,
                    75,
                    76,
                    77,
                    78,
                    79,
                    80,
                    81,
                    82,
                    83,
                    84,
                    85,
                    86,
                    87,
                    88,
                    89,
                    90,
                    91,
                    92,
                    93,
                    94,
                    95,
                    96,
                    97,
                    98,
                    99,
                    100,
                    101,
                    102,
                    103,
                    104,
                    105,
                    106,
                    107,
                    108,
                    109,
                    110,
                    111,
                    112,
                    113,
                    114,
                    115,
                    116,
                    117,
                    118,
                    119,
                    120,
                    121,
                    122,
                    123,
                    124,
                    125,
                    126,
                    127,
                    128,
                    129,
                    130,
                    131,
                    132,
                    133,
                    134,
                    135,
                    136,
                    137,
                    138,
                    139,
                    140,
                    141,
                    142,
                    143,
                    144,
                    145,
                    146,
                    147,
                    148,
                    149,
                    150,
                    151,
                    152,
                    153,
                    154,
                    155,
                    156,
                    157,
                    158,
                    159,
                    160,
                    161,
                    162,
                    163,
                    164,
                    165,
                    166,
                    167,
                    168,
                    169,
                    170,
                    171,
                    172,
                    173,
                    174,
                    175,
                    176,
                    177,
                    178,
                    179,
                    180,
                    181,
                    182,
                    183,
                    184,
                    185,
                    186,
                    187,
                    188,
                    189,
                    190,
                    191,
                    192,
                    193,
                    194,
                    195,
                    196,
                    197,
                    198,
                    199,
                    200,
                    201,
                    202,
                    203,
                  ]),
                  'start': 449,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol#L46',
        'id': '8d18da367a9cfe0bee2ee48ee8a76072af23567d852cc81ed75dd90531cbe3d5',
        'impact': 'Medium',
        'markdown': '''
          The function signature of [ERC20.fopwCDKKK](tests/detectors/domain-separator-collision/0.5.16/permit_domain_state_var_collision.sol#L46) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[DomainSeparatorCollision-0.5.16-permit_domain_wrong_return_type.sol]
  list([
    list([
      dict({
        'check': 'domain-separator-collision',
        'confidence': 'High',
        'description': '''
          The function signature of ERC20.DOMAIN_SEPARATOR() (tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol#161-163) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
        'elements': list([
          dict({
            'name': 'DOMAIN_SEPARATOR',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol',
              'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol',
              'is_dependency': False,
              'length': 90,
              'lines': list([
                161,
                162,
                163,
              ]),
              'start': 5255,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'ERC20',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol',
                  'filename_short': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol',
                  'is_dependency': False,
                  'length': 6135,
                  'lines': list([
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                    49,
                    50,
                    51,
                    52,
                    53,
                    54,
                    55,
                    56,
                    57,
                    58,
                    59,
                    60,
                    61,
                    62,
                    63,
                    64,
                    65,
                    66,
                    67,
                    68,
                    69,
                    70,
                    71,
                    72,
                    73,
                    74,
                    75,
                    76,
                    77,
                    78,
                    79,
                    80,
                    81,
                    82,
                    83,
                    84,
                    85,
                    86,
                    87,
                    88,
                    89,
                    90,
                    91,
                    92,
                    93,
                    94,
                    95,
                    96,
                    97,
                    98,
                    99,
                    100,
                    101,
                    102,
                    103,
                    104,
                    105,
                    106,
                    107,
                    108,
                    109,
                    110,
                    111,
                    112,
                    113,
                    114,
                    115,
                    116,
                    117,
                    118,
                    119,
                    120,
                    121,
                    122,
                    123,
                    124,
                    125,
                    126,
                    127,
                    128,
                    129,
                    130,
                    131,
                    132,
                    133,
                    134,
                    135,
                    136,
                    137,
                    138,
                    139,
                    140,
                    141,
                    142,
                    143,
                    144,
                    145,
                    146,
                    147,
                    148,
                    149,
                    150,
                    151,
                    152,
                    153,
                    154,
                    155,
                    156,
                    157,
                    158,
                    159,
                    160,
                    161,
                    162,
                    163,
                    164,
                    165,
                    166,
                    167,
                    168,
                    169,
                    170,
                    171,
                    172,
                    173,
                    174,
                    175,
                    176,
                    177,
                    178,
                    179,
                    180,
                    181,
                    182,
                    183,
                    184,
                    185,
                    186,
                    187,
                    188,
                    189,
                    190,
                    191,
                    192,
                    193,
                    194,
                    195,
                    196,
                    197,
                    198,
                    199,
                    200,
                    201,
                    202,
                    203,
                    204,
                    205,
                  ]),
                  'start': 449,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'DOMAIN_SEPARATOR()',
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol#L161-L163',
        'id': '17ee24b60ef7d108871021639c374d6711feb1c8e3aad52ab266a680c03831cb',
        'impact': 'Medium',
        'markdown': '''
          The function signature of [ERC20.DOMAIN_SEPARATOR()](tests/detectors/domain-separator-collision/0.5.16/permit_domain_wrong_return_type.sol#L161-L163) collides with DOMAIN_SEPARATOR and should be renamed or removed.
  
        ''',
      }),
    ]),
  ])
# ---
